fix photos shifting page

--- a/index_files/websiteCSS.css
+++ b/index_files/websiteCSS.css
@@ -6,6 +6,10 @@ html, body {
   display: none !important;
 }
 
+.separateImages {
+  min-height: 430px !important;
+}
+
 h1 {
   font-size: 1.602em;
 }
